# advent-of-code

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  bazel-advent-of-code  bazel-bin  bazel-out  bazel-testlogs  go.mod  go.work
util/: BUILD.bazel  go.mod
util/common/: BUILD.bazel  common.go
util/geometry/: BUILD.bazel  geometry.go
util/graph/: BUILD.bazel  graph.go
util/interval/: BUILD.bazel  interval.go
util/math/: BUILD.bazel  math.go
util/matrix/: BUILD.bazel  matrix.go
util/set/: BUILD.bazel  set.go
util/strconv/: BUILD.bazel  strconv.go
util/unionfind/: BUILD.bazel  unionfind.go
years/2025/: go.mod
years/2025/day1/: 1a.go  1a_test.go  1b.go  1b_test.go  BUILD.bazel
years/2025/day11/: 11a.go  11a_test.go  11b.go  11b_test.go  BUILD.bazel
years/2025/day2/: 2a.go  2a_test.go  2b.go  2b_test.go  BUILD.bazel
years/2025/day3/: 3a.go  3a_test.go  3b.go  3b_test.go  BUILD.bazel
years/2025/day4/: 4a.go  4a_test.go  4b.go  4b_test.go  BUILD.bazel
years/2025/day5/: 5a.go  5a_test.go  5b.go  5b_test.go  BUILD.bazel
years/2025/day6/: 6a.go  6a_test.go  6b.go  6b_test.go  BUILD.bazel
years/2025/day7/: 7a.go  7a_test.go  7b.go  7b_test.go  BUILD.bazel
years/2025/day8/: 8a.go  8a_test.go  8b.go  8b_test.go  BUILD.bazel
years/2025/day8_ai/: 8a.go  8a_test.go  8b.go  8b_test.go  BUILD.bazel
