load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "day8",
    srcs = [
        "8a.go",
        "8b.go",
    ],
    importpath = "github.com/lonnblad/advent-of-code/years/2025/day8",
    visibility = ["//visibility:public"],
    deps = [
        "//util/geometry",
        "//util/strconv",
    ],
)

go_test(
    name = "day8_test",
    srcs = [
        "8a_test.go",
        "8b_test.go",
    ],
    embedsrcs = [
        "8a_input.example.txt",
        "8a_input.txt",
        "8b_input.example.txt",
        "8b_input.txt",
    ],
    deps = [
        ":day8",
        "@com_github_stretchr_testify//require",
    ],
)
